add another place in the code to makes sure the docker image is trimmed